--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-name: Hank Quinlan, Horrible Cop
-markdown: kramdown
+title: "light.gg Frequently Asked Questions"
 remote_theme: pmarsceill/just-the-docs
 # Aux links for the upper right navigation
 aux_links:
