--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "light.gg Frequently Asked Questions"
+title: "light.gg FAQs"
 remote_theme: pmarsceill/just-the-docs
 # Aux links for the upper right navigation
 aux_links:
