--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,4 @@ aux_links:
 footer_content: "Copyright &copy; light.gg"
 color_scheme: "dark"
 ga_tracking: UA-107713767-1
+url: "https://docs.light.gg"
